feat: 캐릭터의 정보를 NEXON OPEN API에서 검색해 DB에 저장하는 로직 권한 부여